# nipe_macho

./: .gitignore  README.md  pyproject.toml
.github/workflows/: code-quality.yml
notebooks/: data_annotation.ipynb  grounded-sam-2-auto-label.ipynb  potholes.ipynb  potholes_v11.ipynb  potholes_v8n.ipynb
