[tool.poetry]
name = "nipe_macho"
version = "0.1.0"
description = "Pothole detection using various YOLO models."
authors = ["Macrey Bwalei <macreybwalei@gmail.com>"]
maintainers = ["Macrey Bwalei <macreybwalei@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["data-science", "computer-vision", "yolo", "pothole-detection", "fynesse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [{include = "nipe_macho"}]
include = ["nipe_macho/defaults.yml"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.2.2"
numpy = "1.26.4"
jupyter = "^1.0.0"
matplotlib = "^3.7.0"
PyYAML = "^6.0.0"
seaborn = "^0.13.0"
ultralytics = "8.2.103"
roboflow = "^1.1.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
types-pyyaml = "^6.0.12.20250822"

[tool.poetry.group.interactive.dependencies]
bokeh = "^3.0.0"

[tool.poetry.urls]
Homepage = "https://github.com/silprosa/nipe_macho"
Repository = "https://github.com/silprosa/nipe_macho.git"
Documentation = "https://github.com/silprosa/nipe_macho#readme"
Issues = "https://github.com/silprosa/nipe_macho/issues"

[tool.pytest.ini_options]
testpaths = ["nipe_macho/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=nipe_macho",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["nipe_macho"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "matplotlib.*",
    "seaborn.*",
    "jupyter.*",
    "bokeh.*",
    "ultralytics.*",
    "roboflow.*"
]
ignore_missing_imports = true
